@@ -30,10 +30,14 @@
  *                                                                        *
  **************************************************************************/
 
+#include <condition_variable>
 #include <cctype>
 #include <fstream>
 #include <memory>
+#include <mutex>
+#include <queue>
 #include <sstream>
+#include <thread>
 #include <popt.h>
 #include <unistd.h>
 #include "census/gluingpermsearcher2.h"
@@ -53,7 +57,7 @@
 #define WORD_Tetrahedron (dim4 ? "Pentachoron" : dim2 ? "Triangle" : "Tetrahedron")
 
 // Constants.
-const long MAXTET = 15;
+constexpr long MAXTET = 15;
 
 // Census parameters.
 long nTet = 0, nBdryFaces = -1;
@@ -73,6 +77,7 @@ regina::CensusPurge whichPurge;
 int genPairs = 0;
 int subContainers = 0;
 std::string outFile;
+int threads = 1;
 
 // Variables used for a dump of face pairings.
 std::unique_ptr<std::ostream> dumpStream;
@@ -82,9 +87,22 @@ unsigned long totPairings = 0;
 long long nSolns;
 std::ofstream sigStream;
 
+// Variables used for multithreaded operation.
+std::mutex casesMutex;
+std::mutex outputMutex;
+std::condition_variable cv;
+using Case = std::pair<std::string, std::shared_ptr<regina::Packet>>;
+std::queue<Case> cases;
+bool noMoreCases = false;
+
 // Forward declarations:
 template <int dim>
 void foundGluingPerms(const regina::GluingPerms<dim>&,
+    const std::shared_ptr<regina::Packet>&);
+
+template <int dim>
+void foundPartial(const regina::GluingPerms<dim>&,
+    const regina::GluingPermSearcher<dim>&,
     const std::shared_ptr<regina::Packet>&);
 
 template <int dim>
@@ -104,8 +122,15 @@ inline void findAllPerms<2>(const regina::FacetPairing<2>& p,
         regina::FacetPairing<2>::IsoList autos, bool orientableOnly,
         bool /* finiteOnly */, regina::CensusPurge,
         const std::shared_ptr<regina::Packet>& dest) {
-    regina::GluingPermSearcher<2>::findAllPerms(p, std::move(autos),
-        orientableOnly, foundGluingPerms<2>, dest);
+    if (threads > 1) {
+        constexpr int depth = 6; // want (dim!)^depth >> threads
+        auto searcher = regina::GluingPermSearcher<2>::bestSearcher(
+            p, std::move(autos), orientableOnly);
+        searcher->partialSearch(depth, foundPartial<2>, *searcher, dest);
+    } else {
+        regina::GluingPermSearcher<2>::findAllPerms(p, std::move(autos),
+            orientableOnly, foundGluingPerms<2>, dest);
+    }
 }
 
 template <>
@@ -118,8 +143,15 @@ inline void findAllPerms<3>(const regina::FacetPairing<3>& p,
         regina::FacetPairing<3>::IsoList autos, bool orientableOnly,
         bool finiteOnly, regina::CensusPurge usePurge,
         const std::shared_ptr<regina::Packet>& dest) {
-    regina::GluingPermSearcher<3>::findAllPerms(p, std::move(autos),
-        orientableOnly, finiteOnly, usePurge, foundGluingPerms<3>, dest);
+    if (threads > 1) {
+        constexpr int depth = 3; // want (dim!)^depth >> threads
+        auto searcher = regina::GluingPermSearcher<3>::bestSearcher(
+            p, std::move(autos), orientableOnly, finiteOnly, usePurge);
+        searcher->partialSearch(depth, foundPartial<3>, *searcher, dest);
+    } else {
+        regina::GluingPermSearcher<3>::findAllPerms(p, std::move(autos),
+            orientableOnly, finiteOnly, usePurge, foundGluingPerms<3>, dest);
+    }
 }
 
 template <>
@@ -132,8 +164,15 @@ inline void findAllPerms<4>(const regina::FacetPairing<4>& p,
         regina::FacetPairing<4>::IsoList autos, bool orientableOnly,
         bool finiteOnly, regina::CensusPurge,
         const std::shared_ptr<regina::Packet>& dest) {
-    regina::GluingPermSearcher<4>::findAllPerms(p, std::move(autos),
-        orientableOnly, finiteOnly, foundGluingPerms<4>, dest);
+    if (threads > 1) {
+        constexpr int depth = 2; // want (dim!)^depth >> threads
+        auto searcher = regina::GluingPermSearcher<4>::bestSearcher(
+            p, std::move(autos), orientableOnly, finiteOnly);
+        searcher->partialSearch(depth, foundPartial<4>, *searcher, dest);
+    } else {
+        regina::GluingPermSearcher<4>::findAllPerms(p, std::move(autos),
+            orientableOnly, finiteOnly, foundGluingPerms<4>, dest);
+    }
 }
 
 template <>
@@ -170,15 +209,49 @@ void foundGluingPerms(const regina::GluingPerms<dim>& perms,
 
     // Put it in the census!
     if (sigs) {
-        sigStream << tri.isoSig() << std::endl;
+        std::string sig = tri.isoSig();
+        if (threads > 1) {
+            std::unique_lock<std::mutex> lock(outputMutex);
+            sigStream << sig << std::endl;
+        } else {
+            sigStream << sig << std::endl;
+        }
     } else {
         std::ostringstream out;
         out << "Item " << (nSolns + 1);
 
-        container->insertChildLast(
-            regina::make_packet(std::move(tri), out.str()));
+        auto packet = regina::make_packet(std::move(tri), out.str());
+        if (threads > 1) {
+            std::unique_lock<std::mutex> lock(outputMutex);
+            container->insertChildLast(packet);
+        } else {
+            container->insertChildLast(packet);
+        }
     }
     ++nSolns;
+}
+
+/**
+ * What to do with each partially-constructed triangulation in a
+ * multi-threaded search.
+ */
+template <int dim>
+void foundPartial(const regina::GluingPerms<dim>& perms,
+        const regina::GluingPermSearcher<dim>& searcher,
+        const std::shared_ptr<regina::Packet>& container) {
+    if (searcher.isComplete()) {
+        // The search tree was extremely shallow, which means everything
+        // has essentially been enumerated by the main thread.
+        foundGluingPerms(perms, container);
+        return;
+    }
+
+    std::string data = searcher.taggedData();
+    {
+        std::unique_lock<std::mutex> lock(casesMutex);
+        cases.emplace(std::move(data), container);
+    }
+    cv.notify_one();
 }
 
 /**
@@ -203,6 +276,34 @@ void foundFacePairing(const regina::FacetPairing<dim>& pairing,
         findAllPerms<dim>(pairing, std::move(autos),
             ! orientability.hasFalse(), ! finiteness.hasFalse(),
             whichPurge, container);
+    }
+}
+
+/**
+ * The work performed by each thread in a multithreaded census.
+ */
+template <int dim>
+void processCases() {
+    Case c;
+    while (true) {
+        {
+            std::unique_lock<std::mutex> lock(casesMutex);
+            if (! cases.empty()) {
+                c = std::move(cases.front());
+                cases.pop();
+            } else if (noMoreCases)
+                return;
+            else {
+                // There are no cases available right now, but some
+                // might appear later.
+                cv.wait(lock);
+                continue;
+            }
+        }
+
+        // Process the subsearch encoded by data.
+        regina::GluingPermSearcher<dim>::fromTaggedData(c.first)->runSearch(
+            foundGluingPerms<dim>, c.second);
     }
 }
 
@@ -328,6 +429,8 @@ int main(int argc, const char* argv[]) {
             "Only generate face pairings, not triangulations.", nullptr },
         { "usepairs", 'P', POPT_ARG_NONE, &usePairs, 0,
             "Only use face pairings read from standard input.", nullptr },
+        { "threads", 0, POPT_ARG_INT, &threads, 0,
+            "Number of parallel threads (default = 1).", "<threads>" },
         POPT_AUTOHELP
         { nullptr, 0, 0, nullptr, 0, nullptr, nullptr }
     };
@@ -374,13 +477,17 @@ int main(int argc, const char* argv[]) {
         broken = true;
     } else if (genPairs && (argOr || argNor)) {
         std::cerr << "Orientability options cannot be used with "
-            << "-p/--genpairs.\n";
+            "-p/--genpairs.\n";
         broken = true;
     } else if (genPairs && (argFinite || argIdeal)) {
         std::cerr << "Finiteness options cannot be used with -p/--genpairs.\n";
         broken = true;
     } else if (genPairs && sigs) {
         std::cerr << "Signature output cannot be used with -p/--genpairs.\n";
+        broken = true;
+    } else if (genPairs && threads != 1) {
+        std::cerr << "Multithreading options cannot be used with "
+            "-p/--genpairs.\n";
         broken = true;
     } else if (dim2 && dim4) {
         std::cerr << "Options -2/--dim2 and -4/--dim4 cannot be used together.\n";
@@ -441,6 +548,9 @@ int main(int argc, const char* argv[]) {
     } else if (subContainers && sigs) {
         std::cerr << "Signatures (-s/--sigs) cannot be used with "
             << "sub-containers (-c/--subcontainers).\n";
+        broken = true;
+    } else if (threads < 1) {
+        std::cerr << "The number of threads must be strictly positive.\n";
         broken = true;
     }
 
@@ -592,6 +702,13 @@ int runCensus() {
     else if (minimal)
         whichPurge = regina::PURGE_NON_MINIMAL;
 
+    std::thread** t = nullptr;
+    if (threads > 1) {
+        t = new std::thread*[threads - 1];
+        for (int i = 0; i < threads - 1; ++i)
+            t[i] = new std::thread(processCases<dim>);
+    }
+
     if (usePairs) {
         // Only use the face pairings read from standard input.
         std::cout << "Trying " << WORD_face << " pairings..." << std::endl;
@@ -645,9 +762,30 @@ int runCensus() {
 
         regina::FacetPairing<dim>::findAllPairings(nTet, boundary, nBdryFaces,
             foundFacePairing<dim>, census /* dest */);
-
-        std::cout << "Finished." << std::endl;
     }
+
+    if (threads > 1) {
+        {
+            std::unique_lock<std::mutex> lock(casesMutex);
+            noMoreCases = true;
+        }
+        cv.notify_all();
+
+        std::cout << "Waiting for subsearches to finish..." << std::endl;
+
+        // In most scenarios this main thread will finish long before
+        // the workers.  The main thread should offer to help out since
+        // there is nothing else left for it to do.
+        processCases<dim>();
+
+        for (int i = 0; i < threads - 1; ++i) {
+            t[i]->join();
+            delete t[i];
+        }
+        delete[] t;
+    }
+
+    std::cout << "Finished." << std::endl;
 
     // Write the completed census to file.
     if (sigs) {
