@@ -36,6 +36,9 @@ Version 7.1  [ TODO ]
         - For classes that have a bool() cast operator, this is now wrapped in
           Python using the special __bool__() function (i.e., Python will now
           cast such objects to bool in the same way).
+    UTILITIES:
+        tricensus:
+            - Now supports multithreading via the new --threads option.
 
 Version 7.0  [ 19 December, 2021 ]
 
